--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
             people.
             But is it really fulfilling its promise?
           </p>
-          <button>Read more</button>
+          <button>
+            <a href="#">
+              Read more
+            </a>
+          </button>
         </div>
 
       </div>
