--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
+  <!--Bootstrap Icons-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css">
+  <!--JS-->
+  <script src="script/script.js" defer></script>
   <!--CSS-->
   <link rel="stylesheet" href="style/style.css">
   <title>Document</title>
 </head>
 
 <body>
+  <div id="dark-bg" class="inactive"></div>
   <nav id="nav">
     <div id="nav-logo">
       <img src="images/logo.svg" alt="">
@@ -25,6 +30,19 @@
       <a href="#">Popular</a>
       <a href="#">Trending</a>
       <a href="#">Categories</a>
+    </div>
+    <div id="hamburguer-menu" class="inactive">
+      <i class="bi bi-list"></i>
+    </div>
+    <div id="offset-menu" class="inactive">
+      <i class="bi bi-x-lg"></i>
+      <div id="offset-links">
+        <a href="#">Home</a>
+        <a href="#">New</a>
+        <a href="#">Popular</a>
+        <a href="#">Trending</a>
+        <a href="#">Categories</a>
+      </div>
     </div>
   </nav>
   <main id="main">
