--- a/index.html
+++ b/index.html
@@ -62,39 +62,37 @@
             people.
             But is it really fulfilling its promise?
           </p>
-          <button>
-            <a href="#">
-              Read more
-            </a>
-          </button>
+          <a href="#" id="button">
+            Read more
+          </a>
         </div>
 
       </div>
     </div>
     <div id="side-content">
       <h1>New</h1>
-      <h3>
+      <h2>
         <a href="">Hydrogen VS Electric Cars</a>
-      </h3>
+      </h2>
       <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
-      <h3>
+      <h2>
         <a href="">The Downsides of AI Artistry</a>
-      </h3>
+      </h2>
       <p>What are the possible adverse effects of on-demand AI image generation?</p>
-      <h3>
+      <h2>
         <a href="">Is VC Funding Drying Up?</a>
-      </h3>
+      </h2>
       <p id="last">Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
     </div>
   </main>
-  <section id="news-bottom">
+  <footer id="news-bottom">
     <div class="news-bottom-items">
       <img src="images/image-retro-pcs.jpg" alt="">
       <div class="bottom-items-text">
         <h1>01</h1>
-        <h3>
+        <h2>
           <a href="">Reviving Retro PCs</a>
-        </h3>
+        </h2>
         <p>What happens when old PCs are given modern upgrades?</p>
       </div>
     </div>
@@ -102,9 +100,9 @@
       <img src="images/image-top-laptops.jpg" alt="">
       <div class="bottom-items-text">
         <h1>02</h1>
-        <h3>
+        <h2>
           <a href="">Top 10 Laptops of 2022</a>
-        </h3>
+        </h2>
         <p>Our best picks for various needs and budgets.</p>
       </div>
 
@@ -113,13 +111,13 @@
       <img src="images/image-gaming-growth.jpg" alt="">
       <div class="bottom-items-text">
         <h1>03</h1>
-        <h3>
+        <h2>
           <a href="">The Growth of Gaming</a>
-        </h3>
+        </h2>
         <p>How the pandemic has sparked fresh opportunities.</p>
       </div>
     </div>
-  </section>
+  </footer>
 </body>
 
 </html>
